kubernetes/apps/localai/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: localai
  namespace: localai
  labels:
    app.kubernetes.io/name: localai
spec:
  selector:
    app.kubernetes.io/name: localai
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
