kubernetes/apps/localai/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "LocalAI"
  name: localai
  namespace: localai
  labels:
    app.kubernetes.io/name: localai
spec:
  hostnames: ["localai.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: localai
          namespace: localai
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
